--- a/index.html
+++ b/index.html
@@ -89,28 +89,9 @@ ul.task-list li input[type="checkbox"] {
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav navbar-nav-scroll me-auto">
   <li class="nav-item">
-    <a class="nav-link" href="./blog-listing.html"> 
-<span class="menu-text">Blog(FOR CLASS)</span></a>
-  </li>  
-  <li class="nav-item">
     <a class="nav-link" href="./projects.html"> 
-<span class="menu-text">Projects</span></a>
+<span class="menu-text">Project Blogs</span></a>
   </li>  
-  <li class="nav-item dropdown ">
-    <a class="nav-link dropdown-toggle" href="#" id="nav-menu-python-data-analysis(for-class" role="link" data-bs-toggle="dropdown" aria-expanded="false">
- <span class="menu-text">Python Data Analysis(FOR CLASS)</span>
-    </a>
-    <ul class="dropdown-menu" aria-labelledby="nav-menu-python-data-analysis(for-class">    
-        <li>
-    <a class="dropdown-item" href="./pandas_basics.html">
- <span class="dropdown-text">Pandas Basics</span></a>
-  </li>  
-        <li>
-    <a class="dropdown-item" href="./seaborn_basics.html">
- <span class="dropdown-text">Seaborn Basics</span></a>
-  </li>  
-    </ul>
-  </li>
 </ul>
           </div> <!-- /navcollapse -->
             <div class="quarto-navbar-tools">
