--- a/projects.html
+++ b/projects.html
@@ -150,28 +150,9 @@ window.Quarto = {
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav navbar-nav-scroll me-auto">
   <li class="nav-item">
-    <a class="nav-link" href="./blog-listing.html"> 
-<span class="menu-text">Blog(FOR CLASS)</span></a>
-  </li>  
-  <li class="nav-item">
     <a class="nav-link active" href="./projects.html" aria-current="page"> 
-<span class="menu-text">Projects</span></a>
+<span class="menu-text">Project Blogs</span></a>
   </li>  
-  <li class="nav-item dropdown ">
-    <a class="nav-link dropdown-toggle" href="#" id="nav-menu-python-data-analysis(for-class" role="link" data-bs-toggle="dropdown" aria-expanded="false">
- <span class="menu-text">Python Data Analysis(FOR CLASS)</span>
-    </a>
-    <ul class="dropdown-menu" aria-labelledby="nav-menu-python-data-analysis(for-class">    
-        <li>
-    <a class="dropdown-item" href="./pandas_basics.html">
- <span class="dropdown-text">Pandas Basics</span></a>
-  </li>  
-        <li>
-    <a class="dropdown-item" href="./seaborn_basics.html">
- <span class="dropdown-text">Seaborn Basics</span></a>
-  </li>  
-    </ul>
-  </li>
 </ul>
           </div> <!-- /navcollapse -->
             <div class="quarto-navbar-tools">
@@ -264,7 +245,7 @@ Brendan Style
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="1" data-listing-date-sort="1740459600000" data-listing-file-modified-sort="1741820812943" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="12" data-listing-word-count-sort="2306">
+<div class="quarto-post image-right" data-index="1" data-listing-date-sort="1713672000000" data-listing-file-modified-sort="1748900817628" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="12" data-listing-word-count-sort="2306">
 <div class="thumbnail">
 <p><a href="./projects/proj_1/index.html" class="no-external"></a></p><a href="./projects/proj_1/index.html" class="no-external">
 <p><img loading="lazy" src="./projects/proj_1/draft_logo.png" class="thumbnail-image"></p>
@@ -281,7 +262,7 @@ Brendan Style
 <div class="metadata">
 <a href="./projects/proj_1/index.html" class="no-external">
 <div class="listing-date">
-Feb 25, 2025
+Apr 21, 2024
 </div>
 <div class="listing-author">
 Brendan Style
