--- a/projects/proj_1/index.html
+++ b/projects/proj_1/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Brendan Style">
-<meta name="dcterms.date" content="2025-02-25">
+<meta name="dcterms.date" content="2024-04-21">
 
 <title>NFL Draft Trends Analyzed and Visualized – Brendan Style</title>
 <style>
@@ -92,28 +92,9 @@ ul.task-list li input[type="checkbox"] {
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav navbar-nav-scroll me-auto">
   <li class="nav-item">
-    <a class="nav-link" href="../../blog-listing.html"> 
-<span class="menu-text">Blog(FOR CLASS)</span></a>
-  </li>  
-  <li class="nav-item">
     <a class="nav-link" href="../../projects.html"> 
-<span class="menu-text">Projects</span></a>
+<span class="menu-text">Project Blogs</span></a>
   </li>  
-  <li class="nav-item dropdown ">
-    <a class="nav-link dropdown-toggle" href="#" id="nav-menu-python-data-analysis(for-class" role="link" data-bs-toggle="dropdown" aria-expanded="false">
- <span class="menu-text">Python Data Analysis(FOR CLASS)</span>
-    </a>
-    <ul class="dropdown-menu" aria-labelledby="nav-menu-python-data-analysis(for-class">    
-        <li>
-    <a class="dropdown-item" href="../../pandas_basics.html">
- <span class="dropdown-text">Pandas Basics</span></a>
-  </li>  
-        <li>
-    <a class="dropdown-item" href="../../seaborn_basics.html">
- <span class="dropdown-text">Seaborn Basics</span></a>
-  </li>  
-    </ul>
-  </li>
 </ul>
           </div> <!-- /navcollapse -->
             <div class="quarto-navbar-tools">
@@ -149,7 +130,7 @@ ul.task-list li input[type="checkbox"] {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">February 25, 2025</p>
+      <p class="date">April 21, 2024</p>
     </div>
   </div>
   
