--- a/index.html
+++ b/index.html
@@ -92,6 +92,10 @@ ul.task-list li input[type="checkbox"] {
     <a class="nav-link" href="./projects.html"> 
 <span class="menu-text">Project Blogs</span></a>
   </li>  
+  <li class="nav-item">
+    <a class="nav-link" href="./model.html"> 
+<span class="menu-text">Home Run Model</span></a>
+  </li>  
 </ul>
           </div> <!-- /navcollapse -->
             <div class="quarto-navbar-tools">
@@ -130,25 +134,21 @@ ul.task-list li input[type="checkbox"] {
     <i class="bi bi-github"></i>
      <span class="about-link-text">GitHub</span>
   </a>
-  <a href="/25_style_resume.pdf" class="about-link" rel="" target="_blank">
+  <a href="/BrendanStyle_resume.pdf" class="about-link" rel="" target="_blank">
     <i class="bi bi-file-earmark-pdf"></i>
      <span class="about-link-text">Resumé</span>
   </a>
-  <a href="mailto:bjs100@geneseo.edu" class="about-link" rel="" target="">
+  <a href="mailto:brendanstyle1@gmail.com" class="about-link" rel="" target="">
     <i class="bi bi-mailbox"></i>
      <span class="about-link-text">Email</span>
   </a>
 </div>
   </div>
   <div class="about-contents"><main class="content" id="quarto-document-content">
-<p>Brendan Style majors in Data Analytics at SUNY Geneseo. While at school, Brendan also spends his time competing as a member of the Geneseo Track and Field Team.</p>
+<p>Brendan Style is a recent graduate from SUNY Geneseo, with a degree in Data Analytics. While at school, Brendan also spent his time competing as a member of the Geneseo Track and Field Team.</p>
 <section id="education" class="level2">
 <h2 data-anchor-id="education">Education</h2>
 <p>State University of New York at Geneseo | Geneseo, NY <br> B.S. in Data Analytics | Aug 2021 - May 2025 <br></p>
-</section>
-<section id="experience" class="level2">
-<h2 data-anchor-id="experience">Experience</h2>
-<p>SUNY Geneseo | Data Analytics Tutor | August 2024 - Current</p>
 
 
 </section>
