--- a/projects.html
+++ b/projects.html
@@ -153,6 +153,10 @@ window.Quarto = {
     <a class="nav-link active" href="./projects.html" aria-current="page"> 
 <span class="menu-text">Project Blogs</span></a>
   </li>  
+  <li class="nav-item">
+    <a class="nav-link" href="./model.html"> 
+<span class="menu-text">Home Run Model</span></a>
+  </li>  
 </ul>
           </div> <!-- /navcollapse -->
             <div class="quarto-navbar-tools">
@@ -220,7 +224,7 @@ window.Quarto = {
     </div>
 </div>
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-listing-date-sort="1745208000000" data-listing-file-modified-sort="1747575137421" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="21" data-listing-word-count-sort="4001">
+<div class="quarto-post image-right" data-index="0" data-listing-date-sort="1745208000000" data-listing-file-modified-sort="1752100867726" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="21" data-listing-word-count-sort="4001">
 <div class="thumbnail">
 <p><a href="./projects/320_final/index.html" class="no-external"></a></p><a href="./projects/320_final/index.html" class="no-external">
 <p><img loading="lazy" src="./projects/320_final/title_card.webp" class="thumbnail-image"></p>
@@ -245,7 +249,7 @@ Brendan Style
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="1" data-listing-date-sort="1713672000000" data-listing-file-modified-sort="1748900817628" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="12" data-listing-word-count-sort="2306">
+<div class="quarto-post image-right" data-index="1" data-listing-date-sort="1713672000000" data-listing-file-modified-sort="1752100867733" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="12" data-listing-word-count-sort="2306">
 <div class="thumbnail">
 <p><a href="./projects/proj_1/index.html" class="no-external"></a></p><a href="./projects/proj_1/index.html" class="no-external">
 <p><img loading="lazy" src="./projects/proj_1/draft_logo.png" class="thumbnail-image"></p>
