--- a/model.html
+++ b/model.html
@@ -6,7 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="dcterms.date" content="2025-07-12">
+<meta name="dcterms.date" content="2025-07-13">
 
 <title>Home Run Betting Model – Brendan Style</title>
 <style>
@@ -127,7 +127,7 @@ ul.task-list li input[type="checkbox"] {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">July 12, 2025</p>
+      <p class="date">July 13, 2025</p>
     </div>
   </div>
   
@@ -167,13 +167,13 @@ ul.task-list li input[type="checkbox"] {
 <div class="cell-output-display">
 <table class="caption-top table table-sm table-striped small">
 <colgroup>
-<col style="width: 19%">
-<col style="width: 21%">
-<col style="width: 12%">
-<col style="width: 12%">
-<col style="width: 12%">
+<col style="width: 18%">
+<col style="width: 25%">
+<col style="width: 13%">
+<col style="width: 13%">
+<col style="width: 13%">
 <col style="width: 6%">
-<col style="width: 14%">
+<col style="width: 10%">
 </colgroup>
 <thead>
 <tr class="header">
@@ -188,58 +188,22 @@ ul.task-list li input[type="checkbox"] {
 </thead>
 <tbody>
 <tr class="odd">
-<td style="text-align: left;">Ha-Seong Kim</td>
-<td style="text-align: left;">Garrett Crochet</td>
-<td style="text-align: left;">TB</td>
-<td style="text-align: left;">BOS</td>
-<td style="text-align: right;">443</td>
-<td style="text-align: right;">557</td>
+<td style="text-align: left;">Rafael Devers</td>
+<td style="text-align: left;">Yoshinobu Yamamoto</td>
+<td style="text-align: left;">LAD</td>
+<td style="text-align: left;">SF</td>
+<td style="text-align: right;">355</td>
+<td style="text-align: right;">245</td>
 <td style="text-align: left;">FanDuel</td>
 </tr>
 <tr class="even">
-<td style="text-align: left;">Adolis Garcia</td>
-<td style="text-align: left;">Framber Valdez</td>
-<td style="text-align: left;">TEX</td>
-<td style="text-align: left;">HOU</td>
-<td style="text-align: right;">456</td>
-<td style="text-align: right;">294</td>
+<td style="text-align: left;">Nolan Jones</td>
+<td style="text-align: left;">Aaron Civale</td>
+<td style="text-align: left;">CLE</td>
+<td style="text-align: left;">CWS</td>
+<td style="text-align: right;">408</td>
+<td style="text-align: right;">222</td>
 <td style="text-align: left;">FanDuel</td>
-</tr>
-<tr class="odd">
-<td style="text-align: left;">Dansby Swanson</td>
-<td style="text-align: left;">Max Fried</td>
-<td style="text-align: left;">CHC</td>
-<td style="text-align: left;">NYY</td>
-<td style="text-align: right;">449</td>
-<td style="text-align: right;">251</td>
-<td style="text-align: left;">DraftKings</td>
-</tr>
-<tr class="even">
-<td style="text-align: left;">James McCann</td>
-<td style="text-align: left;">Yusei Kikuchi</td>
-<td style="text-align: left;">ARI</td>
-<td style="text-align: left;">LAA</td>
-<td style="text-align: right;">441</td>
-<td style="text-align: right;">239</td>
-<td style="text-align: left;">FanDuel</td>
-</tr>
-<tr class="odd">
-<td style="text-align: left;">Luis Garcia</td>
-<td style="text-align: left;">Brandon Woodruff</td>
-<td style="text-align: left;">WSH</td>
-<td style="text-align: left;">MIL</td>
-<td style="text-align: right;">352</td>
-<td style="text-align: right;">208</td>
-<td style="text-align: left;">FanDuel</td>
-</tr>
-<tr class="even">
-<td style="text-align: left;">Yandy Diaz</td>
-<td style="text-align: left;">Garrett Crochet</td>
-<td style="text-align: left;">TB</td>
-<td style="text-align: left;">BOS</td>
-<td style="text-align: right;">395</td>
-<td style="text-align: right;">205</td>
-<td style="text-align: left;">DraftKings</td>
 </tr>
 </tbody>
 </table>
