erased old files

--- a/model.html
+++ b/model.html
@@ -143,7 +143,7 @@ ul.task-list li input[type="checkbox"] {
 <section id="columns" class="level3">
 <h3 class="anchored" data-anchor-id="columns">Columns</h3>
 <ul>
-<li>Pred_odds: Based on the model and data, their expected betting odds for hitting a home run</li>
+<li>Pred_odds: Based on the model and data, their predicted betting odds for hitting a home run</li>
 <li>Diff: The difference between my predicted odds and the listed sportsbook odds, higher = more percieved value</li>
 <li>Sportsbook: The sportsbook that features the highest (least likely) odds for the listed player</li>
 </ul>
