--- a/model.html
+++ b/model.html
@@ -6,7 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="dcterms.date" content="2025-07-13">
+<meta name="dcterms.date" content="2025-07-14">
 
 <title>Home Run Betting Model – Brendan Style</title>
 <style>
@@ -127,7 +127,7 @@ ul.task-list li input[type="checkbox"] {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">July 13, 2025</p>
+      <p class="date">July 14, 2025</p>
     </div>
   </div>
   
@@ -163,52 +163,10 @@ ul.task-list li input[type="checkbox"] {
 <li>Stadium factors based on Pulled-FB rate</li>
 </ul>
 <p>Here are the picks for today, we will be tracking the profit of these picks as the remainder of the season goes along. Enjoy!</p>
-<div class="cell">
-<div class="cell-output-display">
-<table class="caption-top table table-sm table-striped small">
-<colgroup>
-<col style="width: 18%">
-<col style="width: 25%">
-<col style="width: 13%">
-<col style="width: 13%">
-<col style="width: 13%">
-<col style="width: 6%">
-<col style="width: 10%">
-</colgroup>
-<thead>
-<tr class="header">
-<th style="text-align: left;">player</th>
-<th style="text-align: left;">pitcher</th>
-<th style="text-align: left;">away_team</th>
-<th style="text-align: left;">home_team</th>
-<th style="text-align: right;">pred_odds</th>
-<th style="text-align: right;">diff</th>
-<th style="text-align: left;">book</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td style="text-align: left;">Rafael Devers</td>
-<td style="text-align: left;">Yoshinobu Yamamoto</td>
-<td style="text-align: left;">LAD</td>
-<td style="text-align: left;">SF</td>
-<td style="text-align: right;">355</td>
-<td style="text-align: right;">245</td>
-<td style="text-align: left;">FanDuel</td>
-</tr>
-<tr class="even">
-<td style="text-align: left;">Nolan Jones</td>
-<td style="text-align: left;">Aaron Civale</td>
-<td style="text-align: left;">CLE</td>
-<td style="text-align: left;">CWS</td>
-<td style="text-align: right;">408</td>
-<td style="text-align: right;">222</td>
-<td style="text-align: left;">FanDuel</td>
-</tr>
-</tbody>
-</table>
-</div>
-</div>
+<p>Today is the Home Run Derby, and while my model certainly isn’t equipped to handle that kind of environment, it expects it to be very close! The difference between the winner and last place is just over 4 percentage points. While I can’t post odds, My model had Jazz Chisholm around +650 to win, whereas other sportsbooks are listing him around +1000 and higher. My advice is to bet on Jazz!</p>
+</section>
+<section id="recho-falsemessage-false-warningfalse-librarydplyr-libraryreadxl-data---read.csvcusersbrenddesktopdanl-320brendan-style.github.iodaily_lineups.csv-data---datadatapick-0-databook---ifelsedatafanduel-datadraftkings-fanduel-draftkings-data---selectdata-playerpitcheraway_teamhome_teampred_oddsdiffbook-data---data-arrangedescdiff-knitrkableheaddata-50-row.names-false" class="level1">
+<h1><code>{r,echo =FALSE,message= FALSE, warning=FALSE} # library(dplyr) # library(readxl) # data &lt;- read.csv("C:/Users/brend/Desktop/DANL-320/brendan-style.github.io/daily_lineups.csv") # data &lt;- data[data$pick &gt; 0, ] # data$book &lt;- ifelse(data$FanDuel &gt; data$DraftKings, "FanDuel", "DraftKings") # data &lt;- select(data, 'player','pitcher','away_team','home_team','pred_odds','diff','book') # data &lt;- data %&gt;% arrange(desc(diff)) # knitr::kable(head(data, 50), row.names = FALSE) #</code></h1>
 
 
 </section>
