--- a/model.html
+++ b/model.html
@@ -6,7 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="dcterms.date" content="2025-07-14">
+<meta name="dcterms.date" content="2025-07-13">
 
 <title>Home Run Betting Model – Brendan Style</title>
 <style>
@@ -127,7 +127,7 @@ ul.task-list li input[type="checkbox"] {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">July 14, 2025</p>
+      <p class="date">July 13, 2025</p>
     </div>
   </div>
   
@@ -163,10 +163,7 @@ ul.task-list li input[type="checkbox"] {
 <li>Stadium factors based on Pulled-FB rate</li>
 </ul>
 <p>Here are the picks for today, we will be tracking the profit of these picks as the remainder of the season goes along. Enjoy!</p>
-<p>Today is the Home Run Derby, and while my model certainly isn’t equipped to handle that kind of environment, it expects it to be very close! The difference between the winner and last place is just over 4 percentage points. While I can’t post odds, My model had Jazz Chisholm around +650 to win, whereas other sportsbooks are listing him around +1000 and higher. My advice is to bet on Jazz!</p>
-</section>
-<section id="recho-falsemessage-false-warningfalse-librarydplyr-libraryreadxl-data---read.csvcusersbrenddesktopdanl-320brendan-style.github.iodaily_lineups.csv-data---datadatapick-0-databook---ifelsedatafanduel-datadraftkings-fanduel-draftkings-data---selectdata-playerpitcheraway_teamhome_teampred_oddsdiffbook-data---data-arrangedescdiff-knitrkableheaddata-50-row.names-false" class="level1">
-<h1><code>{r,echo =FALSE,message= FALSE, warning=FALSE} # library(dplyr) # library(readxl) # data &lt;- read.csv("C:/Users/brend/Desktop/DANL-320/brendan-style.github.io/daily_lineups.csv") # data &lt;- data[data$pick &gt; 0, ] # data$book &lt;- ifelse(data$FanDuel &gt; data$DraftKings, "FanDuel", "DraftKings") # data &lt;- select(data, 'player','pitcher','away_team','home_team','pred_odds','diff','book') # data &lt;- data %&gt;% arrange(desc(diff)) # knitr::kable(head(data, 50), row.names = FALSE) #</code></h1>
+<p>Today is the Home Run Derby, and while my model certainly isn’t equipped to handle that kind of Environment, it expects it to be very close! The difference between the winner and last place is just over 4 percentage points. While I can’t post odds, My model had Jazz Chisholm around +650 to win, whereas other sportsbooks are listing him around +1000 and higher. My advice is to bet on Jazz!</p>
 
 
 </section>
